# Tarea_2_ICI2244-1

./: .gitignore  CMakeLists.txt  README.md  compile.bat  puntos_interes.csv  turistas.csv
include/: app.h  csv.h  hashmap.h  list.h  point.h  turist.h  util.h
src/: app.c  csv.c  hashmap.c  list.c  main.c  point.c  turist.c  util.c
